--- a/tbrfeed/templates/loggedin.html
+++ b/tbrfeed/templates/loggedin.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>TbrFeed</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" />
         <script type="text/javascript">
 
             var _gaq = _gaq || [];
@@ -67,7 +67,7 @@
                     </ul>
                     <ul class="nav navbar-nav pull-right">
                         <li class="navbar-text">{{ session['user_name'] }}</li>
-                        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                        <li><a href="{{ url_for('logout') }}?csrf_token={{ csrf_token }}">Logout</a></li>
                         <li><a href="javascript:deactive()">Deactive</a></li>
                     </ul>
                 </nav>
@@ -247,8 +247,8 @@
             </div>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
         <script>
             $(function () {
                 $(".feed h1").click(function () {
@@ -258,7 +258,7 @@
 
             function deactive() {
                 if (confirm("あなたのフィード URI を無効にします。よろしいですか？")) {
-                    location.href = "{{ url_for('suspend') }}"
+                    location.href = "{{ url_for('suspend') }}?csrf_token={{ csrf_token }}"
                 }
             }
         </script>
